@@ -2,7 +2,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*- 
  * op-instance.c -- Function dealing with op-instance.
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2005 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -216,11 +216,8 @@ Term *property(Op_Instance *opi, PString p_name)
 	  if (! opi->intended) { /* The frame is thus not installed. */
 	       desinstall_frame(opi->frame, tmp_frame);
 	  }
-     } else {
-	  res = MAKE_OBJECT(Term);
-	  res->type = TT_ATOM;
-	  res->u.id = nil_sym;
-     }
+     } else 
+	  res = build_nil();
      
      return res;
 }
