@@ -1,3 +1,8 @@
+2007-12-04  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* oprs-parser.y: list_functions, not list_pred_func.
+	
+
 2007-10-17  Francois Felix Ingrand  <felix@ingrand.net>
 
 	* lex-parser-def.l (YY_INPUT):
